load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

py_binary(
  name = "crosshair",
  srcs = ["crosshair.py"],
  deps = [
    "@pip//pynput:pkg",
    "@pip//tk:pkg",
  ],
  data = [
    "images/cross_square.png"
  ],
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
    requirements_windows = "requirements_windows.txt",
)